# connectFourAI

./: .gitignore  CMakeLists.txt  GameState.cpp  GameState.h  README.md  cfai.cpp  cfai.h  eval.c  eval.h  main.cpp
